<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_top"
    tools:context=".User.SigninSignup.UsersStartUpScreen"
    android:transitionName="transition_startup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="70dp"
            android:src="@drawable/hs_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/meta_bold"
            android:text="@string/start_up_screen_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tag_line"
            android:textAlignment="center"
            android:textColor="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:onClick="callSignUpScreen"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:elevation="8dp"
                android:transitionName="transition_signup" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>