<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    android:transitionName="transition_next_btn"
    tools:context=".User.SigninSignup.ForgetPasswordSuccessMsg">

    <ImageView
        android:visibility="gone"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_close" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="-80dp"
            android:src="@drawable/ic_check_circle"
            android:tint="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/meta_bold"
            android:includeFontPadding="false"
            android:text="@string/password_updated"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/password_updated_msg"
            android:textAlignment="center"
            android:textColor="@color/gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_bg"
            android:text="@string/sign_in"
            android:onClick="callSignInScreen"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:elevation="8dp"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>