<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.SigninSignup.RecoveryOption"
    android:background="@color/white"
    android:padding="20dp"
    android:transitionName="transition_next_btn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:visibility="gone"
            android:onClick="callSignInScreen"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close"/>

        <TextView
            android:id="@+id/signup_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recover_password"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:fontFamily="@font/meta_bold"
            android:textAllCaps="true"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_option"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/light_white_bg"
            android:padding="10dp"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/mobile_icon"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_phone_android"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/mobile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/mobile_icon"/>

            <TextView
                android:id="@+id/mobile_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_sms_desc"
                android:textColor="@color/black"
                android:layout_below="@+id/mobile_title"
                android:layout_toRightOf="@id/mobile_icon"/>

            <TextView
                android:id="@+id/phone_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+27......580"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_below="@+id/mobile_desc"
                android:layout_toRightOf="@id/mobile_icon"/>

            <Button
                android:id="@+id/via_sms_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:onClick="callOtpScreen"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/light_white_bg"
            android:padding="10dp"
            android:elevation="8dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_mail_outline"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"/>

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_email"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/email_icon"/>

            <TextView
                android:id="@+id/email_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/via_email_desc"
                android:textColor="@color/black"
                android:layout_below="@+id/email_title"
                android:layout_toRightOf="@id/email_icon"/>

            <TextView
                android:id="@+id/email_recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="use*@gmail.com"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_below="@+id/email_desc"
                android:layout_toRightOf="@id/email_icon"/>

            <Button
                android:id="@+id/via_email_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:onClick="callEmailScreen"/>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>